--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -257,6 +257,16 @@
         &.in { opacity: $modal-backdrop-opacity; }
     }
 
+    // Modal rootElement specified
+    .modal-open:not(body) {
+        .modal,
+        .modal-backdrop {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
     // Modal header
     // Top section of the modal w/ title and dismiss
     @if $enable-modal-header {
