--- a/site/_includes/4.2/partials/head.html
+++ b/site/_includes/4.2/partials/head.html
@@ -8,7 +8,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="{{ description | default: site.description | smartify }}">
+<meta name="description" content="{{ description | default: site.description | escape }}">
 <meta name="author" content="{{ site.author }}">
 
 {% if site.environment == "production" -%}
