--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -51,6 +51,7 @@
 @import "component/loader";
 
 // Components w/ JavaScript
+@import "component/offcanvas";
 @import "component/modal";
 @import "component/tooltip";
 @import "component/popover";
