--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -18,6 +18,7 @@
 
 // Components
 @import "mixins/alert";
+@import "mixins/backdrop";
 @import "mixins/buttons";
 @import "mixins/caret";
 @import "mixins/divider";
