--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -443,7 +443,7 @@ $mark-padding:      .125em .25em !default;
 $mark-bg:           #ff0 !default;
 
 $hr-margin-y:       1rem !default;
-$hr-bg:             currentColor !default;
+$hr-bg:             currentcolor !default;
 $hr-color:          inherit !default;
 $hr-height:         $border-width !default;
 $hr-border:         0 !default;
