Table: Add striped columns
For future reference: Hoverable columns would need JS assistance, not something that is possible using only CSS.

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -40,6 +40,7 @@ $enable-figure:                             true !default;
 $enable-table:                              true !default;
 $enable-table-borders:                      true !default;
 $enable-table-striped:                      true !default;
+$enable-table-striped-cols:                 true !default;
 $enable-table-hover:                        true !default;
 $enable-table-condensed:                    true !default;
 $enable-table-active:                       true !default;
