Add `opacity` utiility classes

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -291,6 +291,8 @@ $enable-utility-pointer-events:             true !default;
 
 $enable-utility-link-stretch:               true !default;
 
+$enable-utility-opacity:                    true !default;
+
 $enable-utility-overflow:                   true !default;
 
 $enable-utility-position:                   true !default;
