Add `.sticky-bottom` positioning utility class
Also adds responsive variants.

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -300,6 +300,8 @@ $enable-utility-position-fixed-top:         true !default;
 $enable-utility-position-fixed-bottom:      true !default;
 $enable-utility-position-sticky-top:        true !default;
 $enable-utility-position-sticky-top-responsive: true !default;
+$enable-utility-position-sticky-bottom:     true !default;
+$enable-utility-position-sticky-bottom-responsive: true !default;
 $enable-utility-position-placement:         true !default;
 $enable-utility-position-translate:         true !default;
 
