Add placeholder component
- Change some instances of `currentColor` to `currentcolor`
- Fix placholder typos

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -188,6 +188,12 @@ $enable-pagination-spaced:                  true !default;
 $enable-pagination-group:                   true !default;
 $enable-pagination-sizing:                  true !default;
 
+// Placeholder
+$enable-placeholder:                        true !default;
+$enable-placeholder-sizes:                  true !default;
+$enable-placeholder-wave:                   true !default;
+$enable-placeholder-glow:                   true !default;
+
 // Progress
 $enable-progress:                           true !default;
 $enable-progress-striped:                   true !default;
