--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -49,6 +49,7 @@
 @import "component/card";
 @import "component/alert";
 @import "component/loader";
+@import "component/placeholder";
 
 // Components w/ JavaScript
 @import "component/offcanvas";
