--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -299,6 +299,10 @@ $enable-utility-link-stretch:               true !default;
 
 $enable-utility-opacity:                    true !default;
 
+$enable-utility-orientation:                true !default;
+$enable-utility-orientation-rotate:         true !default;
+$enable-utility-orientation-flip:           true !default;
+
 $enable-utility-overflow:                   true !default;
 
 $enable-utility-position:                   true !default;
