--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1465,3 +1465,12 @@ $utility-opacity: (
     "75": .75,
     "100": 1
 ) !default;
+$utility-rotate: (
+    "45": rotate(45deg),
+    "90": rotate(90deg),
+    "135": rotate(135deg),
+    "180": rotate(180deg),
+    "225": rotate(45deg),
+    "270": rotate(270deg),
+    "315": rotate(315deg)
+) !default;
