--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -8,6 +8,7 @@
 @import "utilities/interaction";
 @import "utilities/link";
 @import "utilities/opacity";
+@import "utilities/orientation";
 @import "utilities/overflow";
 @import "utilities/position";
 @import "utilities/screen-reader";
