Forms: Add `.form-check-reverse` modifier
Also adds an opinionated sizing for default checkbox and radio inputs so we can get the alignment correct.

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -72,6 +72,7 @@ $enable-form-text:                          true !default;
 $enable-form-check:                         true !default;
 $enable-form-check-checkradio:              true !default;
 $enable-form-check-switch:                  true !default;
+$enable-form-check-reverse:                 true !default;
 $enable-form-file:                          true !default;
 $enable-form-file-sizing:                   true !default;
 $enable-form-range:                         true !default;
