--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -820,6 +820,8 @@ $input-placeholder-color:       #999 !default;
 
 $input-static-color:            $body-color !default;
 
+$input-checkradio-size:         .875rem !default;
+
 $form-label-font-weight:        $font-weight-normal !default;
 
 $form-text-margin-top:          .25rem !default;
