Add stack utilities

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -336,6 +336,10 @@ $enable-utility-spacing-margin:             true !default;
 $enable-utility-spacing-margin-auto:        true !default;
 $enable-utility-spacing-margin-negative:    true !default;
 
+$enable-utility-stacks:                     true !default;
+$enable-utility-stacks-horizontal:          true !default;
+$enable-utility-stacks-vertical:            true !default;
+
 $enable-utility-text:                       true !default;
 $enable-utility-text-justify:               true !default;
 $enable-utility-text-wrap:                  true !default;
