--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -15,6 +15,7 @@
 @import "utilities/shadow";
 @import "utilities/sizing";
 @import "utilities/spacing";
+@import "utilities/stack";
 @import "utilities/typography";
 @import "utilities/valign";
 @import "utilities/visibility";
