--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -84,19 +84,13 @@ body {
 // Content grouping
 //
 // 1. Reset Firefox's gray color
-// 2. Set correct height and prevent the `size` attribute to make the `hr` look like an input field
 hr {
     margin: $hr-margin-y 0;
     color: $hr-color; // 1
-    background-color: $hr-bg;
-    border: $hr-border;
+    border: 0;
+    border-top: $hr-border-width solid $hr-border-color;
     opacity: $hr-opacity;
 }
-
-hr:not([size]) {
-    height: $hr-height; // 2
-}
-
 
 // Typography
 
