--- a/scss/mixins/_divider.scss
+++ b/scss/mixins/_divider.scss
@@ -1,15 +1,21 @@
 // Horizontal divider (basically an hr)
-@mixin divider-h($color: $divider-border-color, $dim: $divider-border-width, $spacer: $divider-spacer) {
+@mixin divider-h($color: $divider-border-color, $dim: $divider-border-width, $spacer: $divider-spacer, $opacity: $divider-opacity) {
     height: 0;
-    margin: $spacer 0;
+    @if ($spacer != null) {
+        margin: $spacer 0;
+    }
     overflow: hidden;
     border-top: $dim solid $color;
+    opacity: $opacity;
 }
 
 // Vertical divider
-@mixin divider-v($color: $divider-border-color, $dim: $divider-border-width, $spacer: $divider-spacer) {
+@mixin divider-v($color: $divider-border-color, $dim: $divider-border-width, $spacer: $divider-spacer, $opacity: $divider-opacity) {
     width: 0;
-    margin: 0 $spacer;
+    @if ($spacer != null) {
+        margin: 0 $spacer;
+    }
     overflow: hidden;
     border-left: $dim solid $color;
+    opacity: $opacity;
 }
