Pagination: Add font-size variable

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1028,6 +1028,7 @@ $pagination-border-width:       $border-width !default;
 $pagination-border-color:       $btn-default-border-color !default;
 $pagination-border-radius:      $border-radius !default;
 
+$pagination-font-size:          $font-size-base !default;
 $pagination-bg:                 $btn-default-bg !default;
 $pagination-color:              $btn-default-color !default;
 
