Popover: Improve z-index handling
- Draggable popovers now sit slightly above the standard ones
- Keeps popovers from rising above modals by resetting the z-index instead of using continuous increment
- z-index will reset once another popover is dragged
- z-index will reset when popover is hidden

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1453,6 +1453,7 @@ $zindex-fixed:              1020 !default;
 $zindex-offcanvas-backdrop: 1030 !default;
 $zindex-offcanvas:          1035 !default;
 $zindex-popover:            1040 !default;
+$zindex-popover-draggable:  1045 !default;
 $zindex-tooltip:            1050 !default;
 $zindex-modal-backdrop:     1060 !default;
 $zindex-modal:              1065 !default;
