--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -92,7 +92,7 @@
                     border: $form-checkradio-border-width solid $form-checkradio-border-color;
                     @include box-shadow($form-checkradio-box-shadow);
                     @include transition($input-transition);
-                    color-adjust: exact;
+                    print-color-adjust: exact;
                 }
             }
 
@@ -207,7 +207,7 @@
                     display: inline-block;
                     content: "";
                     @include transition($switch-transition);
-                    color-adjust: exact;
+                    print-color-adjust: exact;
                 }
 
                 // Track
