Offcanvas: Add responsive variants

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -218,6 +218,7 @@ $enable-offcanvas-header:                   true !default;
 $enable-offcanvas-title:                    true !default;
 $enable-offcanvas-body:                     true !default;
 $enable-offcanvas-footer:                   true !default;
+$enable-offcanvas-responsive:               true !default;
 
 // Modal
 $enable-modal:                              true !default;
