--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -281,6 +281,7 @@ $card-deck-breakpoints:             map-keys($grid-breakpoints) !default;
 $card-group-breakpoints:            map-keys($grid-breakpoints) !default;
 $card-columns-breakpoints:          map-keys($grid-breakpoints) !default;
 $navbar-expand-breakpoints:         map-keys($grid-breakpoints) !default;
+$offcanvas-breakpoints:             map-keys($grid-breakpoints) !default;
 $table-scroll-breakpoints:          map-keys($grid-breakpoints) !default;
 $modal-fullscreen-breakpoints:      map-keys($grid-breakpoints) !default;
 $utility-border-breakpoints:        map-keys($grid-breakpoints) !default;
