--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -203,35 +203,19 @@
 
                     @if $enable-navbar-offcanvas and $enable-offcanvas {
                         .offcanvas {
-                            position: inherit;
-                            bottom: 0;
+                            // stylelint-disable declaration-no-important
+                            position: static;
                             z-index: auto;
                             flex-grow: 1;
-                            visibility: visible !important; // stylelint-disable-line declaration-no-important
-                            background-color: transparent;
-                            border-right: 0;
-                            border-left: 0;
+                            width: auto !important;
+                            height: auto !important;
+                            visibility: visible !important;
+                            background-color: transparent !important;
+                            border: 0 !important;
+                            transform: none !important;
                             @include box-shadow(none);
                             @include transition(none);
-                            transform: none;
-                        }
-
-                        %navbar-offcanvas-side-vertical-#{$bp} {
-                            height: auto;
-                            border-top: 0;
-                            border-bottom: 0;
-                        }
-
-                        @if $enable-offcanvas-side-top {
-                            .offcanvas-top {
-                                @extend %navbar-offcanvas-side-vertical-#{$bp};
-                            }
-                        }
-
-                        @if $enable-offcanvas-side-bottom {
-                            .offcanvas-bottom {
-                                @extend %navbar-offcanvas-side-vertical-#{$bp};
-                            }
+                            // stylelint-enable declaration-no-important
                         }
 
                         @if $enable-offcanvas-header {
