--- a/scss/component/_offcanvas.scss
+++ b/scss/component/_offcanvas.scss
@@ -18,7 +18,6 @@
                 background-clip: padding-box;
                 outline: 0;
                 @include box-shadow($offcanvas-box-shadow);
-                @include transition($offcanvas-transition);
 
                 @if $enable-offcanvas-side-start {
                     &.offcanvas-start {
@@ -67,6 +66,11 @@
                 &.showing,
                 &.in:not(.hiding) {
                     transform: none;
+                }
+
+                &.showing,
+                &.in.hiding {
+                    @include transition($offcanvas-transition);
                 }
 
                 &.showing,
@@ -186,7 +190,7 @@
     }
 
     // Close is blocked animation
-    .offcanvas-blocked.in {
+    .offcanvas.offcanvas-blocked.in {
         @include transition($offcanvas-blocked-transition);
         transform: $offcanvas-blocked-transform;
     }
