Utilities-Color: Add background colors with contrasting text

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -254,6 +254,7 @@ $enable-utility-bg:                         true !default;
 $enable-utility-bg-colors:                  true !default;
 $enable-utility-bg-palette:                 true !default;
 $enable-utility-bg-special:                 true !default;
+$enable-utility-bgtext:                     true !default;
 
 $enable-utility-border:                     true !default;
 $enable-utility-border-addition:            true !default;
