--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -154,6 +154,7 @@ $btn-outline-colors:    $base-colors !default;
 $list-colors:           $base-colors !default;
 $table-colors:          $base-colors !default;
 $utility-bg-colors:     $base-colors !default;
+$utility-bgtext-colors: $base-colors !default;
 $utility-border-colors: $base-colors !default;
 $utility-text-colors:   $base-colors !default;
 
